lab4/k0gram.output
Terminals unused in grammar

    WHEN
    DO
    IMPORT
    CONST
    ARROW
    DOUBLE_COLON


State 15 conflicts: 1 shift/reduce
State 37 conflicts: 2 shift/reduce
State 44 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 77 conflicts: 12 shift/reduce
State 90 conflicts: 2 shift/reduce
State 96 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 104 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce
State 106 conflicts: 1 shift/reduce
State 107 conflicts: 1 shift/reduce
State 108 conflicts: 1 shift/reduce
State 110 conflicts: 25 shift/reduce
State 111 conflicts: 1 shift/reduce
State 112 conflicts: 1 shift/reduce
State 118 conflicts: 1 shift/reduce
State 119 conflicts: 1 shift/reduce
State 126 conflicts: 2 shift/reduce
State 134 conflicts: 2 shift/reduce
State 147 conflicts: 2 shift/reduce
State 148 conflicts: 2 shift/reduce
State 149 conflicts: 2 shift/reduce
State 150 conflicts: 2 shift/reduce
State 151 conflicts: 2 shift/reduce
State 152 conflicts: 2 shift/reduce
State 154 conflicts: 2 shift/reduce
State 156 conflicts: 2 shift/reduce
State 165 conflicts: 1 shift/reduce
State 168 conflicts: 2 shift/reduce
State 169 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: topLevelObject

    2 topLevelObject: functionDeclaration

    3 functionDeclaration: FUN IDENT LPAREN functionValueParameters RPAREN block
    4                    | FUN IDENT LPAREN functionValueParameters RPAREN COLON type block
    5                    | FUN IDENT LPAREN functionValueParameters RPAREN ASSIGNMENT expression
    6                    | FUN IDENT LPAREN functionValueParameters RPAREN COLON type ASSIGNMENT expression

    7 functionValueParameters: ε
    8                        | functionValueParameterList

    9 functionValueParameterList: functionValueParameter
   10                           | functionValueParameterList COMMA functionValueParameter

   11 functionValueParameter: IDENT COLON type
   12                       | IDENT COLON type ASSIGNMENT expression

   13 type: IDENT
   14     | IDENT QUEST
   15     | IDENT LANGLE typeArgumentList RANGLE
   16     | IDENT LANGLE typeArgumentList RANGLE QUEST

   17 typeArgumentList: type
   18                 | typeArgumentList COMMA type

   19 block: LCURL statements RCURL

   20 statements: ε
   21           | statements statement

   22 statement: varDeclaration
   23          | functionDeclaration
   24          | ifStatement
   25          | whileStatement
   26          | forStatement
   27          | jumpStatement
   28          | assignment
   29          | expression SEMI
   30          | expression

   31 varDeclaration: VAL IDENT ASSIGNMENT expression
   32               | VAL IDENT COLON type ASSIGNMENT expression
   33               | VAR IDENT ASSIGNMENT expression
   34               | VAR IDENT COLON type ASSIGNMENT expression
   35               | VAR IDENT COLON type

   36 assignment: IDENT ASSIGNMENT expression
   37           | IDENT ADD_ASSIGN expression
   38           | IDENT SUB_ASSIGN expression
   39           | IDENT MUL_ASSIGN expression
   40           | IDENT DIV_ASSIGN expression
   41           | IDENT MOD_ASSIGN expression

   42 ifStatement: IF LPAREN expression RPAREN controlStructureBody
   43            | IF LPAREN expression RPAREN controlStructureBody ELSE controlStructureBody

   44 whileStatement: WHILE LPAREN expression RPAREN controlStructureBody

   45 forStatement: FOR LPAREN IDENT IN expression RPAREN controlStructureBody

   46 jumpStatement: RETURN
   47              | RETURN expression
   48              | BREAK
   49              | CONTINUE

   50 controlStructureBody: block
   51                     | statement

   52 expression: literal
   53           | IDENT
   54           | expression LPAREN RPAREN
   55           | expression LPAREN argumentList RPAREN
   56           | expression LSQUARE expression RSQUARE
   57           | expression DOT IDENT
   58           | expression SAFE_CALL IDENT
   59           | expression AS type
   60           | expression ADD expression
   61           | expression SUB expression
   62           | expression MUL expression
   63           | expression DIV expression
   64           | expression MOD expression
   65           | SUB expression
   66           | NOT expression
   67           | expression INCR
   68           | expression DECR
   69           | expression EQ expression
   70           | expression NEQ expression
   71           | expression LANGLE expression
   72           | expression RANGLE expression
   73           | expression LTE expression
   74           | expression GTE expression
   75           | expression REF_EQ expression
   76           | expression REF_NEQ expression
   77           | expression AND expression
   78           | expression OR expression
   79           | expression RANGE expression
   80           | expression RANGE_UNTIL expression
   81           | expression ELVIS expression
   82           | LPAREN expression RPAREN

   83 argumentList: expression
   84             | argumentList COMMA expression

   85 literal: INTEGERLITERAL
   86        | LONGLITERAL
   87        | REALLITERAL
   88        | DOUBLELITERAL
   89        | BOOLEANLITERAL
   90        | CHARACTERLITERAL
   91        | STRINGLITERAL
   92        | NULLLITERAL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    FUN <tok> (258) 3 4 5 6
    VAL <tok> (259) 31 32
    VAR <tok> (260) 33 34 35
    IF <tok> (261) 42 43
    ELSE <tok> (262) 43
    WHILE <tok> (263) 44
    FOR <tok> (264) 45
    RETURN <tok> (265) 46 47
    BREAK <tok> (266) 48
    CONTINUE <tok> (267) 49
    WHEN <tok> (268)
    IN <tok> (269) 45
    DO <tok> (270)
    IMPORT <tok> (271)
    CONST <tok> (272)
    INTEGERLITERAL <tok> (273) 85
    LONGLITERAL <tok> (274) 86
    REALLITERAL <tok> (275) 87
    DOUBLELITERAL <tok> (276) 88
    BOOLEANLITERAL <tok> (277) 89
    CHARACTERLITERAL <tok> (278) 90
    STRINGLITERAL <tok> (279) 91
    NULLLITERAL <tok> (280) 92
    IDENT <tok> (281) 3 4 5 6 11 12 13 14 15 16 31 32 33 34 35 36 37 38 39 40 41 45 53 57 58
    ASSIGNMENT <tok> (282) 5 6 12 31 32 33 34 36
    ADD_ASSIGN <tok> (283) 37
    SUB_ASSIGN <tok> (284) 38
    MUL_ASSIGN <tok> (285) 39
    DIV_ASSIGN <tok> (286) 40
    MOD_ASSIGN <tok> (287) 41
    ADD <tok> (288) 60
    SUB <tok> (289) 61 65
    MUL <tok> (290) 62
    DIV <tok> (291) 63
    MOD <tok> (292) 64
    INCR <tok> (293) 67
    DECR <tok> (294) 68
    EQ <tok> (295) 69
    NEQ <tok> (296) 70
    GTE <tok> (297) 74
    LTE <tok> (298) 73
    REF_EQ <tok> (299) 75
    REF_NEQ <tok> (300) 76
    AND <tok> (301) 77
    OR <tok> (302) 78
    NOT <tok> (303) 66
    SAFE_CALL <tok> (304) 58
    ELVIS <tok> (305) 81
    QUEST <tok> (306) 14 16
    RANGE <tok> (307) 79
    RANGE_UNTIL <tok> (308) 80
    AS <tok> (309) 59
    LPAREN <tok> (310) 3 4 5 6 42 43 44 45 54 55 82
    RPAREN <tok> (311) 3 4 5 6 42 43 44 45 54 55 82
    LCURL <tok> (312) 19
    RCURL <tok> (313) 19
    LSQUARE <tok> (314) 56
    RSQUARE <tok> (315) 56
    LANGLE <tok> (316) 15 16 71
    RANGLE <tok> (317) 15 16 72
    COMMA <tok> (318) 10 18 84
    DOT <tok> (319) 57
    COLON <tok> (320) 4 6 11 12 32 34 35
    SEMI <tok> (321) 29
    ARROW <tok> (322)
    DOUBLE_COLON <tok> (323)


Nonterminals, with rules where they appear

    $accept (69)
        on left: 0
    program <tree> (70)
        on left: 1
        on right: 0
    topLevelObject <tree> (71)
        on left: 2
        on right: 1
    functionDeclaration <tree> (72)
        on left: 3 4 5 6
        on right: 2 23
    functionValueParameters <tree> (73)
        on left: 7 8
        on right: 3 4 5 6
    functionValueParameterList <tree> (74)
        on left: 9 10
        on right: 8 10
    functionValueParameter <tree> (75)
        on left: 11 12
        on right: 9 10
    type <tree> (76)
        on left: 13 14 15 16
        on right: 4 6 11 12 17 18 32 34 35 59
    typeArgumentList <tree> (77)
        on left: 17 18
        on right: 15 16 18
    block <tree> (78)
        on left: 19
        on right: 3 4 50
    statements <tree> (79)
        on left: 20 21
        on right: 19 21
    statement <tree> (80)
        on left: 22 23 24 25 26 27 28 29 30
        on right: 21 51
    varDeclaration <tree> (81)
        on left: 31 32 33 34 35
        on right: 22
    assignment <tree> (82)
        on left: 36 37 38 39 40 41
        on right: 28
    ifStatement <tree> (83)
        on left: 42 43
        on right: 24
    whileStatement <tree> (84)
        on left: 44
        on right: 25
    forStatement <tree> (85)
        on left: 45
        on right: 26
    jumpStatement <tree> (86)
        on left: 46 47 48 49
        on right: 27
    controlStructureBody <tree> (87)
        on left: 50 51
        on right: 42 43 44 45
    expression <tree> (88)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
        on right: 5 6 12 29 30 31 32 33 34 36 37 38 39 40 41 42 43 44 45 47 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
    argumentList <tree> (89)
        on left: 83 84
        on right: 55 84
    literal <tree> (90)
        on left: 85 86 87 88 89 90 91 92
        on right: 52


State 0

    0 $accept: • program $end

    FUN  shift, and go to state 1

    program              go to state 2
    topLevelObject       go to state 3
    functionDeclaration  go to state 4


State 1

    3 functionDeclaration: FUN • IDENT LPAREN functionValueParameters RPAREN block
    4                    | FUN • IDENT LPAREN functionValueParameters RPAREN COLON type block
    5                    | FUN • IDENT LPAREN functionValueParameters RPAREN ASSIGNMENT expression
    6                    | FUN • IDENT LPAREN functionValueParameters RPAREN COLON type ASSIGNMENT expression

    IDENT  shift, and go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: topLevelObject •

    $default  reduce using rule 1 (program)


State 4

    2 topLevelObject: functionDeclaration •

    $default  reduce using rule 2 (topLevelObject)


State 5

    3 functionDeclaration: FUN IDENT • LPAREN functionValueParameters RPAREN block
    4                    | FUN IDENT • LPAREN functionValueParameters RPAREN COLON type block
    5                    | FUN IDENT • LPAREN functionValueParameters RPAREN ASSIGNMENT expression
    6                    | FUN IDENT • LPAREN functionValueParameters RPAREN COLON type ASSIGNMENT expression

    LPAREN  shift, and go to state 7


State 6

    0 $accept: program $end •

    $default  accept


State 7

    3 functionDeclaration: FUN IDENT LPAREN • functionValueParameters RPAREN block
    4                    | FUN IDENT LPAREN • functionValueParameters RPAREN COLON type block
    5                    | FUN IDENT LPAREN • functionValueParameters RPAREN ASSIGNMENT expression
    6                    | FUN IDENT LPAREN • functionValueParameters RPAREN COLON type ASSIGNMENT expression

    IDENT  shift, and go to state 8

    $default  reduce using rule 7 (functionValueParameters)

    functionValueParameters     go to state 9
    functionValueParameterList  go to state 10
    functionValueParameter      go to state 11


State 8

   11 functionValueParameter: IDENT • COLON type
   12                       | IDENT • COLON type ASSIGNMENT expression

    COLON  shift, and go to state 12


State 9

    3 functionDeclaration: FUN IDENT LPAREN functionValueParameters • RPAREN block
    4                    | FUN IDENT LPAREN functionValueParameters • RPAREN COLON type block
    5                    | FUN IDENT LPAREN functionValueParameters • RPAREN ASSIGNMENT expression
    6                    | FUN IDENT LPAREN functionValueParameters • RPAREN COLON type ASSIGNMENT expression

    RPAREN  shift, and go to state 13


State 10

    8 functionValueParameters: functionValueParameterList •
   10 functionValueParameterList: functionValueParameterList • COMMA functionValueParameter

    COMMA  shift, and go to state 14

    $default  reduce using rule 8 (functionValueParameters)


State 11

    9 functionValueParameterList: functionValueParameter •

    $default  reduce using rule 9 (functionValueParameterList)


State 12

   11 functionValueParameter: IDENT COLON • type
   12                       | IDENT COLON • type ASSIGNMENT expression

    IDENT  shift, and go to state 15

    type  go to state 16


State 13

    3 functionDeclaration: FUN IDENT LPAREN functionValueParameters RPAREN • block
    4                    | FUN IDENT LPAREN functionValueParameters RPAREN • COLON type block
    5                    | FUN IDENT LPAREN functionValueParameters RPAREN • ASSIGNMENT expression
    6                    | FUN IDENT LPAREN functionValueParameters RPAREN • COLON type ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 17
    LCURL       shift, and go to state 18
    COLON       shift, and go to state 19

    block  go to state 20


State 14

   10 functionValueParameterList: functionValueParameterList COMMA • functionValueParameter

    IDENT  shift, and go to state 8

    functionValueParameter  go to state 21


State 15

   13 type: IDENT •
   14     | IDENT • QUEST
   15     | IDENT • LANGLE typeArgumentList RANGLE
   16     | IDENT • LANGLE typeArgumentList RANGLE QUEST

    QUEST   shift, and go to state 22
    LANGLE  shift, and go to state 23

    LANGLE    [reduce using rule 13 (type)]
    $default  reduce using rule 13 (type)


State 16

   11 functionValueParameter: IDENT COLON type •
   12                       | IDENT COLON type • ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 24

    $default  reduce using rule 11 (functionValueParameter)


State 17

    5 functionDeclaration: FUN IDENT LPAREN functionValueParameters RPAREN ASSIGNMENT • expression

    INTEGERLITERAL    shift, and go to state 25
    LONGLITERAL       shift, and go to state 26
    REALLITERAL       shift, and go to state 27
    DOUBLELITERAL     shift, and go to state 28
    BOOLEANLITERAL    shift, and go to state 29
    CHARACTERLITERAL  shift, and go to state 30
    STRINGLITERAL     shift, and go to state 31
    NULLLITERAL       shift, and go to state 32
    IDENT             shift, and go to state 33
    SUB               shift, and go to state 34
    NOT               shift, and go to state 35
    LPAREN            shift, and go to state 36

    expression  go to state 37
    literal     go to state 38


State 18

   19 block: LCURL • statements RCURL

    $default  reduce using rule 20 (statements)

    statements  go to state 39


State 19

    4 functionDeclaration: FUN IDENT LPAREN functionValueParameters RPAREN COLON • type block
    6                    | FUN IDENT LPAREN functionValueParameters RPAREN COLON • type ASSIGNMENT expression

    IDENT  shift, and go to state 15

    type  go to state 40


State 20

    3 functionDeclaration: FUN IDENT LPAREN functionValueParameters RPAREN block •

    $default  reduce using rule 3 (functionDeclaration)


State 21

   10 functionValueParameterList: functionValueParameterList COMMA functionValueParameter •

    $default  reduce using rule 10 (functionValueParameterList)


State 22

   14 type: IDENT QUEST •

    $default  reduce using rule 14 (type)


State 23

   15 type: IDENT LANGLE • typeArgumentList RANGLE
   16     | IDENT LANGLE • typeArgumentList RANGLE QUEST

    IDENT  shift, and go to state 15

    type              go to state 41
    typeArgumentList  go to state 42


State 24

   12 functionValueParameter: IDENT COLON type ASSIGNMENT • expression

    INTEGERLITERAL    shift, and go to state 25
    LONGLITERAL       shift, and go to state 26
    REALLITERAL       shift, and go to state 27
    DOUBLELITERAL     shift, and go to state 28
    BOOLEANLITERAL    shift, and go to state 29
    CHARACTERLITERAL  shift, and go to state 30
    STRINGLITERAL     shift, and go to state 31
    NULLLITERAL       shift, and go to state 32
    IDENT             shift, and go to state 33
    SUB               shift, and go to state 34
    NOT               shift, and go to state 35
    LPAREN            shift, and go to state 36

    expression  go to state 43
    literal     go to state 38


State 25

   85 literal: INTEGERLITERAL •

    $default  reduce using rule 85 (literal)


State 26

   86 literal: LONGLITERAL •

    $default  reduce using rule 86 (literal)


State 27

   87 literal: REALLITERAL •

    $default  reduce using rule 87 (literal)


State 28

   88 literal: DOUBLELITERAL •

    $default  reduce using rule 88 (literal)


State 29

   89 literal: BOOLEANLITERAL •

    $default  reduce using rule 89 (literal)


State 30

   90 literal: CHARACTERLITERAL •

    $default  reduce using rule 90 (literal)


State 31

   91 literal: STRINGLITERAL •

    $default  reduce using rule 91 (literal)


State 32

   92 literal: NULLLITERAL •

    $default  reduce using rule 92 (literal)


State 33

   53 expression: IDENT •

    $default  reduce using rule 53 (expression)


State 34

   65 expression: SUB • expression

    INTEGERLITERAL    shift, and go to state 25
    LONGLITERAL       shift, and go to state 26
    REALLITERAL       shift, and go to state 27
    DOUBLELITERAL     shift, and go to state 28
    BOOLEANLITERAL    shift, and go to state 29
    CHARACTERLITERAL  shift, and go to state 30
    STRINGLITERAL     shift, and go to state 31
    NULLLITERAL       shift, and go to state 32
    IDENT             shift, and go to state 33
    SUB               shift, and go to state 34
    NOT               shift, and go to state 35
    LPAREN            shift, and go to state 36

    expression  go to state 44
    literal     go to state 38


State 35

   66 expression: NOT • expression
